--- a/index.html
+++ b/index.html
@@ -3,42 +3,49 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css" />
-    <meta name="description"
-    content="content="Achat en ligne parmi un vaste choix de produits. Vos articles à petits prix : Ours en peluche, meuble, appareil photo et bien plus !"">
+    <meta name="description" content="Achat en ligne parmi un vaste choix de produits. Vos articles à petits
+        prix : Ours en peluche, meuble, appareil photo et bien plus !">
     <meta name="keywords"
-		content="Ours en peluche, Ourson en peluche, peluche, jouet, caméra, appareil photo, vintage, meuble en bois, chaise, table">
+        content="Ours en peluche, Ourson en peluche, peluche, jouet, caméra, appareil photo, vintage, meuble en bois, chaise, table">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/main.css" />
     <title>Orinoco - Accueil</title>
 </head>
 
 <body>
     <div class="content">
-<!-- Header -->
-<header>
-    <h1>Orinoco</h1>
-<nav>
-    <ul>
-        <li>Accueil</li>
-        <li>Produit</li>
-        <li>Panier</li>
-    </ul>
+        <!-- Header -->
+        <header>
+            <nav class="navMenu">
+                <ul>
+                    <li><a class="acolor" href="#"><i class="fas fa-home"></i>Accueil</a></li>
+                    <li><a class="acolor" href="html/produit.html"><i class="fas fa-camera-retro"></i>Produit</a></li>
+                    <li><a class="acolor" href="html/panier.html"><i class="fas fa-shopping-cart"></i>Panier</a></li>
+                </ul>
+            </nav>
+            <div class="logo">
+                <img src="/public/img/logo-Orinoco.png" alt="Un Caddie, c'est le logo du site de Orinoco">
+            </div>
+        </header>
+        <!-- Header END -->
 
-</nav>    
-</header>
-<!-- Header END -->
+        <!-- Main -->
+        <main>
 
-<!-- Section -->
-<!-- Section END -->
+        </main>
+        <!-- Main END -->
 
-<!-- Footer -->
-<!-- Footer END-->
+        <!-- Footer -->
+        <!-- Footer END-->
 
 
-</div>
-<!-- Scripts JS -->
+    </div>
+    <!-- Scripts JS -->
 
 
 </body>
+
 </html>
