Mise en place de l'API
Mise en place de l'API

--- a/FrontEnd/html/panier.html
+++ b/FrontEnd/html/panier.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Achat en ligne parmi un vaste choix de produits. Vos articles à petits
+        prix : Ours en peluche, meuble, appareil photo et bien plus !">
+    <meta name="keywords"
+        content="Achat, Ours en peluche, Ourson en peluche, peluche, jouet, caméra, appareil photo, vintage, meuble en bois, chaise, table">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Orinoco - Panier</title>
 </head>
+
 <body>
-    
+    <div class="content">
+        <!-- Header -->
+        <header>
+            <nav class="navMenu">
+                <ul>
+                    <li><a class="acolor" href="#" aria-label="Aller sur la page d'Accueil"><i
+                                class="fas fa-home"></i>Accueil</a></li>
+                    <li><a class="acolor" href="html/produit.html" aria-label="Aller sur la page Produit"><i
+                                class="fas fa-camera-retro"></i>Produit</a></li>
+                    <li><a class="acolor" href="html/panier.html" aria-label="Aller sur la page Panier"><i
+                                class="fas fa-shopping-cart"></i>Panier</a></li>
+                </ul>
+            </nav>
+            <div class="logoPosition">
+                <img class="logo" src="/FrontEnd/public/img/logo-Orinoco.png" alt="Un Caddie, c'est le logo du site de Orinoco">
+            </div>
+        </header>
+        <!-- Header END -->
+
+        <!-- Main -->
+        <main>
+            <p>
+            Panier vide
+            Votre panier est vide pour le moment.</p>
+        </main>
+        <!-- Main END -->
+
+        <!-- Footer -->
+        <!-- Footer END-->
+        <footer>
+        <div class="reseauxSociaux">
+            <div class="reseauSocial">
+                <a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/home?lang=fr">
+                    <div class="fa fa-twitter icon-md" id="twitter"></div>
+                </a>
+            </div>
+            <div class="reseauSocial">
+                <a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/">
+                    <div class="fa fa-facebook icon-md" id="facebook"></div>
+                </a>
+            </div>
+        <div class="reseauSocial ">
+            <a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr">
+                <div class="fa fa-instagram icon-md" id="instagram"></div>
+            </a>
+        </div>
+    </div>
+        </footer>
+
+    <!-- Scripts JS -->
+
+
 </body>
+
 </html>
