--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="css/main.css" />
     <title>Orinoco - Accueil</title>
 </head>
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
             <div class="logoPosition">
-                <img class="logo" src="/public/img/logo-Orinoco.png" alt="Un Caddie, c'est le logo du site de Orinoco">
+                <img class="logo" src="/FrontEnd/public/img/logo-Orinoco.png" alt="Un Caddie, c'est le logo du site de Orinoco">
             </div>
         </header>
         <!-- Header END -->
@@ -64,7 +64,8 @@
         </footer>
 
     <!-- Scripts JS -->
-
+    <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
+    <script src="./js/index.js"></script>
 
 </body>
 
