Mise en forme de la page
Footer crée 
Modification de la mise en place de la page

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -30,42 +30,79 @@
                 </ul>
             </nav>
             <div class="logoPosition">
-                <img class="logo" src="/FrontEnd/public/img/logo-Orinoco.png" alt="Un Caddie, c'est le logo du site de Orinoco">
+                <img class="logo" src="/FrontEnd/public/img/logo-Orinoco.png"
+                    alt="Un Caddie, c'est le logo du site de Orinoco">
             </div>
         </header>
         <!-- Header END -->
 
         <!-- Main -->
-        <main>
+        <main class="main__Produit">
 
         </main>
         <!-- Main END -->
 
         <!-- Footer -->
-        <!-- Footer END-->
         <footer>
-        <div class="reseauxSociaux">
-            <div class="reseauSocial">
-                <a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/home?lang=fr">
-                    <div class="fa fa-twitter icon-md" id="twitter"></div>
-                </a>
+            <div class="footer__reseauxSociaux">
+                <div class="reseauSocial">
+                    <a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/home?lang=fr">
+                        <div class="fa fa-twitter icon-md" id="twitter"></div>
+                    </a>
+                </div>
+                <div class="reseauSocial">
+                    <a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/">
+                        <div class="fa fa-facebook icon-md" id="facebook"></div>
+                    </a>
+                </div>
+                <div class="reseauSocial ">
+                    <a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr">
+                        <div class="fa fa-instagram icon-md" id="instagram"></div>
+                    </a>
+                </div>
+                <div class="reseauSocial ">
+                    <a class="social" aria-label="Lien vers YouTube" href="https://www.youtube.com/">
+                        <div class="fab fa-youtube" id="youtube"></div>
+                    </a>
+                </div>
             </div>
-            <div class="reseauSocial">
-                <a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/">
-                    <div class="fa fa-facebook icon-md" id="facebook"></div>
-                </a>
+            <div class="footer_container">
+                <div class="footer__about">
+                    <h2> À-propos</h2>
+                    <ul>
+                        <li><a href="#">Mentions légales</a> </li>
+                        <li><a href="#">Conditions générales de la Marketplace</a></li>
+                        <li><a href="#">Conditions générales de ventes</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer__informations">
+
+                    <h2>Orinoco</h2>
+                    <ul>
+                        <li><a href="#">Qui sommes-nous ?</a></li>
+                        <li><a href="#">Recrutement</a></li>
+                        <li><a href="#">Dévelloppement durable</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer__contact">
+                    <h2>Contact</h2>
+                    <ul>
+                        <li><a href="mailto:Pugliese-Alexandre@live.be">Besoin d'aide ?</a></li>
+                        <li><a href="mailto:Pugliese-Alexandre@live.be">Devenir partenaire</a></li>
+                        <li><a href="mailto:Pugliese-Alexandre@live.be">SAV</a></li>
+                    </ul>
+                </div>
             </div>
-        <div class="reseauSocial ">
-            <a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr">
-                <div class="fa fa-instagram icon-md" id="instagram"></div>
-            </a>
-        </div>
-    </div>
         </footer>
 
-    <!-- Scripts JS -->
-    <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
-    <script src="./js/index.js"></script>
+        <!-- Footer END-->
+
+
+        <!-- Scripts JS -->
+        <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
+        <script src="./js/index.js"></script>
 
 </body>
 
