--- a/FrontEnd/html/produit.html
+++ b/FrontEnd/html/produit.html
@@ -1,12 +1,109 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Achat en ligne parmi un vaste choix de produits. Vos articles à petits
+        prix : Ours en peluche, meuble, appareil photo et bien plus !">
+    <meta name="keywords"
+        content="Ours en peluche, Ourson en peluche, peluche, jouet, caméra, appareil photo, vintage, meuble en bois, chaise, table">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+
+    <link rel="stylesheet" href="/FrontEnd/css/main.css" />
+    <title>Orinoco - Accueil</title>
 </head>
+
 <body>
-    
+    <div class="content">
+        <!-- Header -->
+        <header>
+            <nav class="navMenu">
+                <ul>
+                    <li><a class="acolor" href="/FrontEnd/index.html" aria-label="Aller sur la page d'Accueil"><i
+                                class="fas fa-home"></i>Accueil</a></li>
+                    <li><a class="acolor" href="html/produit.html" aria-label="Aller sur la page Produit"><i
+                                class="fas fa-camera-retro"></i>Produit</a></li>
+                    <li><a class="acolor" href="html/panier.html" aria-label="Aller sur la page Panier"><i
+                                class="fas fa-shopping-cart"></i>Panier</a></li>
+                </ul>
+            </nav>
+            <div class="logoPosition">
+                <img class="logo" src="/FrontEnd/public/img/logo-Orinoco.png"
+                    alt="Un Caddie, c'est le logo du site de Orinoco">
+            </div>
+        </header>
+        <!-- Header END -->
+
+        <!-- Main -->
+        <main class="main__Produit_PageSecondaire">
+
+        </main>
+        <!-- Main END -->
+        
+        <!-- Footer -->
+        <footer>
+            <div class="footer__reseauxSociaux">
+                <div class="reseauSocial">
+                    <a class="social" aria-label="Lien vers Twitter" href="https://twitter.com/home?lang=fr">
+                        <div class="fa fa-twitter icon-md" id="twitter"></div>
+                    </a>
+                </div>
+                <div class="reseauSocial">
+                    <a class="social" aria-label="Lien vers Facebook" href="https://www.facebook.com/">
+                        <div class="fa fa-facebook icon-md" id="facebook"></div>
+                    </a>
+                </div>
+                <div class="reseauSocial ">
+                    <a class="social" aria-label="Lien vers Instagram" href="https://www.instagram.com/?hl=fr">
+                        <div class="fa fa-instagram icon-md" id="instagram"></div>
+                    </a>
+                </div>
+                <div class="reseauSocial ">
+                    <a class="social" aria-label="Lien vers YouTube" href="https://www.youtube.com/">
+                        <div class="fab fa-youtube" id="youtube"></div>
+                    </a>
+                </div>
+            </div>
+            <div class="footer_container">
+                <div class="footer__about">
+                    <h2> À-propos</h2>
+                    <ul>
+                        <li><a href="#">Mentions légales</a> </li>
+                        <li><a href="#">Conditions générales de la Marketplace</a></li>
+                        <li><a href="#">Conditions générales de ventes</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer__informations">
+
+                    <h2>Orinoco</h2>
+                    <ul>
+                        <li><a href="#">Qui sommes-nous ?</a></li>
+                        <li><a href="#">Recrutement</a></li>
+                        <li><a href="#">Dévelloppement durable</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer__contact">
+                    <h2>Contact</h2>
+                    <ul>
+                        <li><a href="mailto:Pugliese-Alexandre@live.be">Besoin d'aide ?</a></li>
+                        <li><a href="mailto:Pugliese-Alexandre@live.be">Devenir partenaire</a></li>
+                        <li><a href="mailto:Pugliese-Alexandre@live.be">SAV</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+
+        <!-- Footer END-->
+
+
+        <!-- Scripts JS -->
+        <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
+        <script src="/FrontEnd/js/produit.js"></script>
+
 </body>
+
 </html>
