Bouton "Ajouter au panier" modifié
Changement de couleur du bouton ajouter au panier

--- a/FrontEnd/html/panier.html
+++ b/FrontEnd/html/panier.html
@@ -12,7 +12,7 @@
 
 
     <link rel="stylesheet" href="/FrontEnd/css/main.css" />
-    <title>Orinoco - Accueil</title>
+    <title>Orinoco - Panier</title>
 </head>
 
 <body>
@@ -23,9 +23,9 @@
                 <ul>
                     <li><a class="acolor" href="/FrontEnd/index.html" aria-label="Aller sur la page d'Accueil"><i
                                 class="fas fa-home"></i>Accueil</a></li>
-                    <li><a class="acolor" href="html/produit.html" aria-label="Aller sur la page Produit"><i
+                    <li><a class="acolor" href="/FrontEnd/html/produit.html" aria-label="Aller sur la page Produit"><i
                                 class="fas fa-camera-retro"></i>Produit</a></li>
-                    <li><a class="acolor" href="html/panier.html" aria-label="Aller sur la page Panier"><i
+                    <li><a class="acolor" href="/FrontEnd/html/panier.html" aria-label="Aller sur la page Panier"><i
                                 class="fas fa-shopping-cart"></i>Panier</a></li>
                 </ul>
             </nav>
@@ -37,7 +37,7 @@
         <!-- Header END -->
 
         <!-- Main -->
-        <main class="main__Produit">
+        <main class="main__Panier">
 
         </main>
         <!-- Main END -->
@@ -102,7 +102,7 @@
 
         <!-- Scripts JS -->
         <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
-        <script src="./js/produit.js"></script>
+        <script src="./js/panier.js"></script>
 
 </body>
 
