--- a/FrontEnd/html/produit.html
+++ b/FrontEnd/html/produit.html
@@ -12,7 +12,7 @@
 
 
     <link rel="stylesheet" href="/FrontEnd/css/main.css" />
-    <title>Orinoco - Accueil</title>
+    <title>Orinoco - Produit</title>
 </head>
 
 <body>
@@ -23,9 +23,9 @@
                 <ul>
                     <li><a class="acolor" href="/FrontEnd/index.html" aria-label="Aller sur la page d'Accueil"><i
                                 class="fas fa-home"></i>Accueil</a></li>
-                    <li><a class="acolor" href="html/produit.html" aria-label="Aller sur la page Produit"><i
+                    <li><a class="acolor" href="/FrontEnd/html/produit.html" aria-label="Aller sur la page Produit"><i
                                 class="fas fa-camera-retro"></i>Produit</a></li>
-                    <li><a class="acolor" href="html/panier.html" aria-label="Aller sur la page Panier"><i
+                    <li><a class="acolor" href="/FrontEnd/html/panier.html" aria-label="Aller sur la page Panier"><i
                                 class="fas fa-shopping-cart"></i>Panier</a></li>
                 </ul>
             </nav>
@@ -41,7 +41,7 @@
 
         </main>
         <!-- Main END -->
-        
+
         <!-- Footer -->
         <footer>
             <div class="footer__reseauxSociaux">
