--- a/FrontEnd/html/panier.html
+++ b/FrontEnd/html/panier.html
@@ -39,6 +39,21 @@
         <!-- Main -->
         <main class="main__Panier">
 
+            <div class="main__Panier_container">
+                <h1 class="main__Panier_Title">Les produits sélectionnées :</h1>
+        
+                <div class="grid-panier">  
+                <div class="container__Recapitulatif">
+                <div class="panier__Id"></div>
+                <div class="panier__Name"></div>
+                <div class="panier__Price"></div>
+                </div>
+        <div class="panier__Product"></div>
+                <div class="panier__Final_Price">
+                <div class="panier__Total_Price">Montant total = <span class="prix__Total"></span></div>
+                </div>
+                </div>
+                </div>
         </main>
         <!-- Main END -->
 
@@ -102,7 +117,7 @@
 
         <!-- Scripts JS -->
         <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
-        <script src="./js/panier.js"></script>
+        <script src="/FrontEnd/js/panier.js"></script>
 
 </body>
 
