--- a/FrontEnd/html/panier.html
+++ b/FrontEnd/html/panier.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="content">
+    < class="content">
         <!-- Header -->
         <header>
             <nav class="navMenu">
@@ -41,19 +41,19 @@
 
             <div class="main__Panier_container">
                 <h1 class="main__Panier_Title">Les produits sélectionnées :</h1>
-        
-                <div class="grid-panier">  
-                <div class="container__Recapitulatif">
-                <div class="panier__Id"></div>
-                <div class="panier__Name"></div>
-                <div class="panier__Price"></div>
+
+                <div class="grid-panier">
+                    <div class="container__Recapitulatif">
+                        <div class="panier__Id"></div>
+                        <div class="panier__Name"></div>
+                        <div class="panier__Price"></div>
+                    </div>
+                    <div class="panier__Product"></div>
+                    <div class="panier__Final_Price">
+                        <div class="panier__Total_Price">Montant total = <span class="prix__Total"></span></div>
+                    </div>
                 </div>
-        <div class="panier__Product"></div>
-                <div class="panier__Final_Price">
-                <div class="panier__Total_Price">Montant total = <span class="prix__Total"></span></div>
-                </div>
-                </div>
-                </div>
+            </div>
         </main>
         <!-- Main END -->
 
