--- a/FrontEnd/html/confirmation-commande.html
+++ b/FrontEnd/html/confirmation-commande.html
@@ -12,7 +12,7 @@
 
 
     <link rel="stylesheet" href="/FrontEnd/css/main.css" />
-    <title>Orinoco - Panier</title>
+    <title>Orinoco - Confirmation de la commande</title>
 </head>
 
 <body>
@@ -36,23 +36,8 @@
         <!-- Header END -->
 
         <!-- Main -->
-        <main class="main__Panier">
+        <main id="main__Recapitulatif_Commande">
 
-            <div class="main__Panier_container">
-                <h1 class="main__Panier_Title">Les produits sélectionnées :</h1>
-
-                <div class="grid-panier">
-                    <div class="container__Recapitulatif">
-                        <div class="panier__Id"></div>
-                        <div class="panier__Name"></div>
-                        <div class="panier__Price"></div>
-                    </div>
-                    <div class="panier__Product"></div>
-                    <div class="panier__Final_Price">
-                        <div class="panier__Total_Price">Montant total = <span class="prix__Total"></span></div>
-                    </div>
-                </div>
-            </div>
         </main>
         <!-- Main END -->
 
@@ -116,7 +101,7 @@
 
         <!-- Scripts JS -->
         <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
-        <script src="/FrontEnd/js/panier.js"></script>
+        <script src="/FrontEnd/js/confirmation-commande.js"></script>
 
 </body>
 
