Responsive -  Correction - Fin de projet
Responsive créé 
Quelques corrections, rectifications apporté au projet

--- a/FrontEnd/html/produit.html
+++ b/FrontEnd/html/produit.html
@@ -103,7 +103,7 @@
         <!-- Scripts JS -->
         <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
         <script src="/FrontEnd/js/produit.js"></script>
-
+    </div>
 </body>
 
 </html>
