--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -104,6 +104,7 @@
         <script src="https://kit.fontawesome.com/0c2a8c50d5.js" crossorigin="anonymous"></script>
         <script src="./js/index.js"></script>
 
+    </div>
 </body>
 
 </html>
