Correction du dossier Readme + Correction html
Correction du dossier Readme
Correction Html des différentes pages

--- a/FrontEnd/html/confirmation-commande.html
+++ b/FrontEnd/html/confirmation-commande.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <link rel="stylesheet" href="/FrontEnd/css/main.css" />
+    <link rel="stylesheet" href="./../css/main.css" />
     <title>Orinoco - Confirmation de la commande</title>
 </head>
 
@@ -20,11 +20,11 @@
         <header>
             <nav class="navMenu">
                 <ul>
-                    <li><a class="acolor" href="/FrontEnd/index.html" aria-label="Aller sur la page d'Accueil"><i
+                    <li><a class="acolor" href="./../index.html" aria-label="Aller sur la page d'Accueil"><i
                                 class="fas fa-home"></i>Accueil</a></li>
-                    <li><a class="acolor" href="/FrontEnd/html/produit.html" aria-label="Aller sur la page Produit"><i
+                    <li><a class="acolor" href="./../produit.html" aria-label="Aller sur la page Produit"><i
                                 class="fas fa-camera-retro"></i>Produit</a></li>
-                    <li><a class="acolor" href="/FrontEnd/html/panier.html" aria-label="Aller sur la page Panier"><i
+                    <li><a class="acolor" href="./../panier.html" aria-label="Aller sur la page Panier"><i
                                 class="fas fa-shopping-cart"></i>Panier</a></li>
                 </ul>
             </nav>
