--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <link rel="stylesheet" href="/FrontEnd/css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Orinoco - Accueil</title>
 </head>
 
@@ -21,7 +21,7 @@
         <header>
             <nav class="navMenu">
                 <ul>
-                    <li><a class="acolor" href="/FrontEnd/index.html" aria-label="Aller sur la page d'Accueil"><i
+                    <li><a class="acolor" href="./index.html" aria-label="Aller sur la page d'Accueil"><i
                                 class="fas fa-home"></i>Accueil</a></li>
                     <li><a class="acolor" href="html/produit.html" aria-label="Aller sur la page Produit"><i
                                 class="fas fa-camera-retro"></i>Produit</a></li>
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
             <div class="logoPosition">
-                <img class="logo" src="/FrontEnd/public/img/logo-Orinoco.png"
+                <img class="logo" src="./public/img/logo-Orinoco.png"
                     alt="Un Caddie, c'est le logo du site de Orinoco">
             </div>
         </header>
